--- a/xtr/templates/xtr/Guess.html
+++ b/xtr/templates/xtr/Guess.html
@@ -15,48 +15,56 @@
 
 {% block content %}
     <p>Попробуй попасть в тот же квадрат, что на предыдущем экране!</p>
-    <div class="box_0_guess" style="position: relative; top: 150px; left: 150px; width: 725px; height: 725px; border-radius: 6px; cursor: pointer;"
+    <div id="box_0_guess" style="position: relative; top: 150px; left: 150px; width: 725px; height: 725px; border-radius: 6px; cursor: pointer;"
          onclick="pick(this)"></div>
-    <div class="box_1_guess" style="position: relative; top: -175px; left: 350px; width: 325px; height: 325px; border-radius: 6px; cursor: pointer;"
+    <div id="box_1_guess" style="position: relative; top: -175px; left: 350px; width: 325px; height: 325px; border-radius: 6px; cursor: pointer;"
          onclick="pick(this)"></div>
-    <div class="box_2_guess" style="position: relative; top: -300px; left: 450px; width: 125px; height: 125px; border-radius: 6px; cursor: pointer;"
+    <div id="box_2_guess" style="position: relative; top: -300px; left: 450px; width: 125px; height: 125px; border-radius: 6px; cursor: pointer;"
          onclick="pick(this)"></div>
-    <div class="box_3_guess" style="position: relative; top: -275px; left: 500px; margin-bottom: 10px; width: 25px; height: 25px; border-radius: 6px; cursor: pointer;"
+    <div id="box_3_guess" style="position: relative; top: -275px; left: 500px; margin-bottom: 10px; width: 25px; height: 25px; border-radius: 6px; cursor: pointer;"
          onclick="pick(this)"></div>
-    <input id="result_form" disabled />
 
-            <input type="hidden" name="guess" required id="id_guess" class="form-control" />
+    <input type="hidden" name="guess" required id="id_guess" class="form-control" />
+    <input type="hidden" name="x_coordinate_form_guess" required id="x_coordinate_form_guess" class="form-control" />
+    <input type="hidden" name="y_coordinate_form_guess" required id="y_coordinate_form_guess" class="form-control" />
+    <!--<input id="coords_box" disabled /> -->
 
     {% block scripts %}
         <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
         <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
         <script type="text/javascript">
             function pick(item) {
-                var guessed_box = $(item).attr("class");
 
-                $(".box_3_guess").fadeOut(100, function() {
-                    $(".box_2_guess").fadeOut(100, function() {
-                        $(".box_1_guess").fadeOut(100, function() {
-                            $(".box_0_guess").fadeOut(100);
+                $("#box_3_guess").fadeOut(100, function() {
+                    $("#box_2_guess").fadeOut(100, function() {
+                        $("#box_1_guess").fadeOut(100, function() {
+                            $("#box_0_guess").fadeOut(100);
                         });
                     });
                 });
 
+                var guessed_box = $(item).attr("id");
                 var js_picked_box = "{{ picked_box }}";
                 if (js_picked_box+"_guess" == guessed_box) {
-                    document.getElementById('result_form').value = "Поздравляем ты угадал(а)!";
                     document.getElementById('id_guess').value = 1;
                 }
                 else {
-                    document.getElementById('result_form').value = "К сожалению, ты не угадал(а) :(";
                     document.getElementById('id_guess').value = 0;
                 }
+
+                document.getElementById('x_coordinate_form_guess').value = event.pageX - document.getElementById('box_0_guess').offsetLeft;
+                document.getElementById('y_coordinate_form_guess').value = event.pageY - document.getElementById('box_0_guess').offsetTop;
+                /*var x = document.getElementById('x_coordinate_form_guess').value;
+                var y = document.getElementById('y_coordinate_form_guess').value;
+                document.getElementById("coords_box").value = "You picked X coordinate: " + x + " You picked Y coordinate: " + y; */
 
             }
 
         </script>
 
     {% endblock %}
+
+    <p>Нажми далее, чтобы увидеть угадал(а) ты или нет!</p>
 
     {% next_button %}
 
