change dot showing picks and guesses to crosshair

--- a/xtr/templates/xtr/Pick_box.html
+++ b/xtr/templates/xtr/Pick_box.html
@@ -17,13 +17,13 @@
     <p>Из квадратов ниже выбери один, нажав на него, и после этого нажми кнопку далее. На следующем экране контуры всех квадратов,
         кроме самого большого, пропадут, а сами квадраты переместятся в другое место на экране. Твоей задачей будет попасть в тот
         же самый квадрат, что ты выберешь сейчас. Чем меньше квадрат, тем больше очков ты получишь, при успешном попадании в него.</p>
-    <div id="box_0" style="position: relative; top: 0px; left: 0px; width: 725px; height: 725px; border-radius: 6px; cursor: pointer;"
+    <div id="box_0" style="position: relative; top: 0px; left: 0px; width: 725px; height: 725px;"
          onclick="pick(this, event)">box_0</div>
-    <div id="box_1" style="position: relative; top: -325px; left: 200px; width: 325px; height: 325px; border-radius: 6px; cursor: pointer;"
+    <div id="box_1" style="position: relative; top: -325px; left: 200px; width: 325px; height: 325px;"
          onclick="pick(this, event)">box_1</div>
-    <div id="box_2" style="position: relative; top: -450px; left: 300px; width: 125px; height: 125px; border-radius: 6px; cursor: pointer;"
+    <div id="box_2" style="position: relative; top: -450px; left: 300px; width: 125px; height: 125px;"
          onclick="pick(this, event)">box_2</div>
-    <div id="box_3" style="position: relative; top: -425px; left: 350px; width: 25px; height: 25px; border-radius: 6px; cursor: pointer;"
+    <div id="box_3" style="position: relative; top: -425px; left: 350px; width: 25px; height: 25px;"
          onclick="pick(this, event)">box_3</div>
 
     <input type="hidden" name="points" required id="id_points" class="form-control" />
