--- a/xtr/templates/xtr/Guess.html
+++ b/xtr/templates/xtr/Guess.html
@@ -15,13 +15,13 @@
 
 {% block content %}
     <p>Попробуй попасть в тот же квадрат, что на предыдущем экране!</p>
-    <div id="box_0_guess" style="position: relative; top: 150px; left: 150px; width: 725px; height: 725px; border-radius: 6px; cursor: pointer;"
+    <div id="box_0_guess" style="position: relative; top: 150px; left: 150px; width: 725px; height: 725px;"
          onclick="pick(this)"></div>
-    <div id="box_1_guess" style="position: relative; top: -175px; left: 350px; width: 325px; height: 325px; border-radius: 6px; cursor: pointer;"
+    <div id="box_1_guess" style="position: relative; top: -175px; left: 350px; width: 325px; height: 325px;"
          onclick="pick(this)"></div>
-    <div id="box_2_guess" style="position: relative; top: -300px; left: 450px; width: 125px; height: 125px; border-radius: 6px; cursor: pointer;"
+    <div id="box_2_guess" style="position: relative; top: -300px; left: 450px; width: 125px; height: 125px;"
          onclick="pick(this)"></div>
-    <div id="box_3_guess" style="position: relative; top: -275px; left: 500px; margin-bottom: 10px; width: 25px; height: 25px; border-radius: 6px; cursor: pointer;"
+    <div id="box_3_guess" style="position: relative; top: -275px; left: 500px; margin-bottom: 10px; width: 25px; height: 25px;"
          onclick="pick(this)"></div>
 
     <input type="hidden" name="guess" required id="id_guess" class="form-control" />
